--- a/android/local.properties
+++ b/android/local.properties
@@ -1,1 +1,4 @@
 flutter.sdk=C:\\Users\\fersi\\AppData\\Local\\flutter
+sdk.dir=C:\\Users\\fersi\\AppData\\Local\\Android\\Sdk
+flutter.buildMode=debug
+flutter.versionName=0.1.0
